--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -43,11 +43,14 @@
 }
 
 h1 {
-  font-family: 'Montserrat', sans-serif;
+  text-align:center;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 40px;
   width: bold;
-  text-align:center;
-  color: #405F76;
+  color: white;
+  margin-bottom: 15px;
+  margin-top: 5px;
+  letter-spacing: 5px;
 }
 
 .contact {
