--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title"           content="Open Season"/>
+    <meta property="og:type"            content="siteweb"/>
+    <meta property="og:url"             content="https://openseason.fr/"/>
+    <meta property="og:image"           content="https://res.cloudinary.com/du59stng5/image/upload/v1575452832/Open_graph_et9nj0.jpg"/>
+    <meta property="og:description"     content="Et si on t'aidait à trouver ton job saisonnier ?"/>
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500|Rancho&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
     <title>OpenSeason</title>
