--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -14,10 +14,11 @@
 .copyright {
   font-family: Montserrat;
   font-size: 12px;
-  color: white;
+  color: #499EAA;
   text-align: left;
   padding-left: 4px;
-  padding-bottom: 3px
+  padding-bottom: 3px;
+  text-align: center;
 }
 
 // span {
@@ -31,8 +32,9 @@
   font-size: 28px;
   color: #499EAA;
   text-align: center;
+  margin-bottom: 0;
 }
 
-// .logo {
-//   margin-top: 5px
-// }
+.logo {
+  margin-botton: 0;
+}
