--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -2,9 +2,10 @@
   <div>
     <h4 class="modal-title" id="myModalLabel"><%= @job.title %></h4>
   </div>
-  <div class="d-flex align-middle">
+  <div class="favor d-flex align-middle">
     <% if @job.favorite?(current_user) %>
-      <i class="fas fa-heart red-icon"></i>
+       <%# link_to '<i class="fas fa-heart red-icon"></i>'.html_safe, favorite_path(favorite.current_user(@job)), method: :delete %>
+       <i class="fas fa-heart red-icon"></i>
       <button type="button" class="close ml-3" data-dismiss="modal">X</button>
     <% else %>
       <%= link_to '<i class="far fa-heart"></i>'.html_safe, job_favorites_path(job_id: @job.id),
@@ -14,7 +15,7 @@
               :class => "red-icon" %>
       <button type="button" class="close ml-3" data-dismiss="modal">X</button>
     <% end %>
-    </div>
+  </div>
 
 </div>
 <div class="modal-body">
@@ -56,7 +57,7 @@
       <div class="card-header" id="headingOne">
         <h3 class="mb-0">
           <button class="btn btn-link button-toggle" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            <i class="fas fa-chevron-down"></i> Description du job
+            <i class="fas fa-chevron-down mr-3"></i> Description du job
           </button>
         </h2>
       </div>
@@ -103,14 +104,15 @@
                   data-target="#collapseTwo"
                   aria-expanded="false"
                   aria-controls="collapseTwo">
-            <i class="fas fa-chevron-down"></i> Postuler
+            <i class="fas fa-chevron-down mr-3"></i>
+            Postuler - <%= @job.applicants %>
           </button>
         </h2>
       </div>
       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
         <div class="card-body">
           <%= simple_form_for [@job, Mission.new] do |f| %>
-            <%= f.input :message, label: 'Exprime toi ici et montre leur ta motivation :', as: :text %>
+            <%= f.input :message, label: 'Exprime ici tes motivations :', as: :text %>
             <%= f.input :status, as: :hidden, input_html: {value: "pending"} %>
             <%= f.submit "Postuler", class: "btn-flat", id: "sweet-alert", onclick:"swal('Candidature envoyée !', 'On croise les doigts pour toi !', 'success');" %>
           <% end %>
