--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -13,7 +13,8 @@
 
 .full-screen-profil {
 
-  background-image: asset-url('user-background.png');
+  background-image: asset_url('user-background.png');
+  // background-image: asset-url('user-background.png');
   background-repeat: no-repeat;
   background-color: white;
 
