--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -13,10 +13,10 @@
 
 .full-screen-profil {
 
-  background-image: image-url('user-background.png');
+  // background-image: image-url('user-background.png');
   // background-image: asset-url('user-background.png');
   background-repeat: no-repeat;
-  background-color: white;
+  background-color: #66BECB;
 
 }
 
