--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -16,7 +16,7 @@
   // background-image: image-url('user-background.png');
   // background-image: asset-url('user-background.png');
   background-repeat: no-repeat;
-  background-color: #66BECB;
+  background-color: #5F9EA0;
 
 }
 
