applicants added to toggle apply on card job

--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -96,7 +96,7 @@
                   data-target="#collapseTwo"
                   aria-expanded="false"
                   aria-controls="collapseTwo">
-            <i class="fas fa-chevron-down"></i> Postuler
+            <i class="fas fa-chevron-down"></i> <%= @job.applicants %>
           </button>
         </h2>
       </div>
