user profil without profil pic handled

--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -10,7 +10,7 @@
         <div class="contact ">
           <div class="bio">
             <div class="photo-profil">
-              <%= image_tag @user.photo %>
+              <%= image_tag default_pic(@user) %>
               <p><%= @user.biograophy %></p>
             </div>
           </div>
