--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -46,7 +46,7 @@
   </div>
   <div class="accordion mt-3" id="accordion">
     <div class="card">
-      <div class="card-header" id="headingOne">
+      <div class="card-header-show" id="headingOne">
         <h3 class="mb-0">
           <button class="btn btn-link button-toggle" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             <i class="fas fa-chevron-down"></i> Description du job
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="card">
-      <div class="card-header" id="headingTwo">
+      <div class="card-header-show" id="headingTwo">
         <h2 class="mb-0">
           <button class="btn btn-link button-toggle collapsed"
                   type="button"
