--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -42,24 +42,50 @@
       </div>
       <div class="col-9">
         <% if current_user == @user %>
-          <div class="mission d-flex justify-content-between">
-            <div class="favorite flex-fill">
-              <h3> <i class="fas fa-heart"></i>Mes annonces sauvegardées </h3>
-              <div class="favorite-jobs">
-                <% @favorites.each do |favorite| %>
-                  <%= render "components/mini_card", job: favorite.job, favorite: favorite, mission: nil %>
-                <% end %>
+          <div class="accordion" id="accordionExample">
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <!-- <h2 class="mb-0"> -->
+                  <button class="btn favorite" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <h3> <i class="fas fa-heart"></i>Mes annonces sauvegardées </h3>
+                  </button>
+                <!-- </h2> -->
+              </div>
+
+              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  <div class="favorite-jobs">
+                    <% if @favorites.nil? %>
+                      <h3>Tu n'as aucune annonce de sauvegardée...</h3>
+                      <h3><%= link_to "on s'y met?", new_preference_path %></h3>
+                    <% else %>
+                      <% @favorites.each do |favorite| %>
+                        <%= render "components/mini_card", job: favorite.job, favorite: favorite, mission: nil %>
+                      <% end %>
+                    <% end %>
+                  </div>
               </div>
             </div>
-            <div class="my-missions">
-              <h3><i class="fas fa-arrow-circle-right"></i>Mes candidatures</h3>
-              <div class="mission-jobs">
-                <% @missions.each do |mission| %>
-                  <%= render "components/mini_card", job: mission.job, mission: mission, favorite: nil %>
-                <% end %>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h2 class="mb-0">
+                  <button class="btn favorite collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <h3><i class="fas fa-arrow-circle-right"></i>Mes candidatures</h3>
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                  <div class="mission-jobs">
+                    <% @missions.each do |mission| %>
+                      <%= render "components/mini_card", job: mission.job, mission: mission, favorite: nil %>
+                    <% end %>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+
           <% unless @user.work_experiences.blank? %>
             <div class="my-experiences">
               <h3><i class="fas fa-user-tie"></i>   Expériences professionnelles</h3>
@@ -90,3 +116,6 @@
     </div>
   </div>
 </div>
+
+
+
