--- a/app/views/components/_mini_card.html.erb
+++ b/app/views/components/_mini_card.html.erb
@@ -1,6 +1,6 @@
 <div class="mini-card">
   <%= image_tag job.logo %>
-  <div class="mini-card-infos">
+  <div class="mini-card-infos align-top">
     <h2><%= link_to job.title, job_path(job.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></h2>
     <div class="">
       <p><%= job.description %></p>
