--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,11 +1,9 @@
 #map {
-  height: 70vh;
-  width: 70vh;
-  margin-left: 8vh;
-  // z-index: 9999;
+  height: calc(100vh - 70px);
+  // width: 100vh;
+  // margin-left: 8vh;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  margin-top: 8vh;
 }
 
 .mapboxgl-popup-content {
