--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,10 +16,11 @@
 }
 
 .job-container {
-  flex: 1 0 40%;
+  // flex: 1 0 40%;
   min-height: 250px;
-  min-width: 350px;
-  max-width: 329px;
+  max-height: 250px;
+  min-width: 329px;
+  max-width: 350px;
   background-color: #F9F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
