--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -39,7 +39,7 @@
       <div class="row justify-content-around">
         <div class="col-xs-12 col-xl-6">
           <div class="job-containers">
-            <% @jobs.first(4).each do |job| %>
+            <% @jobs.each do |job| %>
               <div class="">
                 <%= render 'card', job: job %>
               </div>
