--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,7 +1,8 @@
 #map {
-  height: calc(100vh - 70px);
-  // width: 100vh;
-  // margin-left: 8vh;
+  height: 100vh;
+  width:  600px;
+  position: sticky;
+  top: 0;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
