--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -36,20 +36,20 @@
 <% else %>
   <div class="main">
     <div class="wrapper">
-      <div class="row justify-content-around">
-        <div class="col-xs-12 col-xl-6">
-          <h1 class="my-5">Nous avons trouvé <%= @jobs.length %> jobs qui peuvent te plaire!</h1>
+      <div class="d-flex">
+        <div class="jobs-cards-and-title">
+          <div>
+            <h1 class="my-5">Nous avons trouvé <%= @jobs.length %> jobs qui peuvent te plaire!</h1>
+          </div>
           <div class="job-containers">
             <% @jobs.each do |job| %>
-              <div class="">
+              <div class="m-auto">
                 <%= render 'card', job: job %>
               </div>
             <% end %>
           </div>
         </div>
-        <div class="col-xs-12 col-xl-6">
-          <%= render 'components/map', markers: @markers %>
-        </div>
+        <%= render 'components/map', markers: @markers %>
       </div>
     </div>
   </div>
