--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -81,6 +81,10 @@
               <p>Repas compris</p>
             <% end %>
           </div>
+          <div class="meal text-center">
+            <i class="fas fa-euro-sign" style="color:Tomato"></i>
+            <p><%= @job.salary %> euros / mois</p>
+          </div>
         </div>
       </div>
     </div>
