--- a/app/assets/stylesheets/components/_mini_card.scss
+++ b/app/assets/stylesheets/components/_mini_card.scss
@@ -46,10 +46,18 @@
 }
 
 .mini-card .mini-card-infos {
-  padding: 10px;
+  // padding: 10px;
+  width: 50%;
 }
 .trash {
   position: absolute;
   top: 5px;
   right: 10px;
+}
+
+.status {
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 16px;
+  color: $red;
 }
