--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -45,11 +45,11 @@
           <div class="accordion" id="accordionExample">
             <div class="card">
               <div class="card-header" id="headingOne">
-                <!-- <h2 class="mb-0"> -->
+                <h2 class="mb-0">
                   <button class="btn favorite" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <h3> <i class="fas fa-heart"></i>Mes annonces sauvegardées </h3>
                   </button>
-                <!-- </h2> -->
+                </h2>
               </div>
 
               <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
