--- a/app/views/profils/show.html.erb
+++ b/app/views/profils/show.html.erb
@@ -44,6 +44,24 @@
         <% if current_user == @user %>
           <div class="accordion" id="accordionExample">
             <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h2 class="mb-0">
+                  <button class="btn favorite collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <h3><i class="fas fa-arrow-circle-right"></i>Mes candidatures</h3>
+                  </button>
+                </h2>
+              </div>
+              <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                  <div class="mission-jobs">
+                    <% @missions.each do |mission| %>
+                      <%= render "components/mini_card", job: mission.job, mission: mission, favorite: nil %>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                   <button class="btn favorite" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -51,8 +69,7 @@
                   </button>
                 </h2>
               </div>
-
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                   <div class="favorite-jobs">
                     <% if @favorites.nil? %>
@@ -64,24 +81,6 @@
                       <% end %>
                     <% end %>
                   </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingTwo">
-                <h2 class="mb-0">
-                  <button class="btn favorite collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    <h3><i class="fas fa-arrow-circle-right"></i>Mes candidatures</h3>
-                  </button>
-                </h2>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body">
-                  <div class="mission-jobs">
-                    <% @missions.each do |mission| %>
-                      <%= render "components/mini_card", job: mission.job, mission: mission, favorite: nil %>
-                    <% end %>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
