--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header><%= render 'components/navbar' %></header>
-    <div class="full-screen">
+    <div class="">
       <%= yield %>
     </div>
     <%# render 'components/footer' %>
