--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,6 +1,4 @@
-// Define variables for your color scheme
-
-// For example:
+$charcoal: #364055;
 $red: #D16A66;
 $blue: #167FFB;
 $yellow: #FFC65A;
