--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,31 +1,27 @@
 <% if @jobs.empty? %>
-  <div class="main">
+  <div class="main full-screen pt-5">
     <div class="wrapper">
       <div class="row justify-content-around">
         <div class="col-xs-12 col-xl-6">
-          <div class="job-containers">
-            <h1>Désolé, nous n'avons pas d'offre correspondante...</h1>
-            <div class="container-show-job d-flex">
-              <div class="container-element d-flex flex-column justify-content-around">
-                <div class="mb-3">
-
-                </div>
-                <div class=" container-logo d-flex  col-md-8 offset-md-2 space-between">
-                  <%= link_to new_preference_path do %>
-                <%= image_tag "aleatoire.png", class: "aleatoire" %>
-                <% end %>
-
-                   <%= link_to job_path(Job.all.sample) do %>
-                <%= image_tag "thoughtfull_girl.png", class: "thoughtfull_girl-image" %>
-                <% end %>
-
-                </div>
-
-
-                <div class="container-text d-flex   justify-content-sm-around">
-                  <div class="title-quizz"><%=("Refaire le quizz ?") %></div>
-                  <div class="title-aleatoire"><%=("Choisir un job aléatoirement ?") %></div>
-                </div>
+          <h1 class="my-5">
+            Oups ! <br>
+            Nous n'avons rien trouvé...
+          </h1>
+          <div class="d-flex justify-content-around">
+            <div class="thumbnails">
+              <%= link_to new_preference_path do %>
+                <%= image_tag "aleatoire.png", class: "image" %>
+              <% end %>
+              <div class="title">
+                Refaire le quizz ?
+              </div>
+            </div>
+            <div class="thumbnails">
+              <%= link_to job_path(Job.all.sample) do %>
+                <%= image_tag "thoughtfull_girl.png", class: "image" %>
+              <% end %>
+              <div class="title">
+                Choisir un job aléatoirement ?
               </div>
             </div>
           </div>
