--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -4,7 +4,7 @@
       <div class="col-12 col-xl-12">
         <div class="job-containers">
           <% @jobs.sample(8).each do |job| %>
-            <div class="">
+            <div class="m-auto">
               <%= render 'card', job: job %>
             </div>
           <% end %>
