A NE PAS MERGER

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,12 @@
-.row {
-  margin-right: 3px;
-  min-height: auto;
-}
+// .row {
+//   margin-right: 3px;
+//   min-height: auto;
+// }
 
-.container {
-  display: flex;
-  overflow: hidden;
-}
+// .container {
+//   display: flex;
+//   overflow: hidden;
+// }
 
 
 
