--- a/app/assets/stylesheets/pages/_jobs_show.scss
+++ b/app/assets/stylesheets/pages/_jobs_show.scss
@@ -10,9 +10,9 @@
   // margin-right: 50px;
 }
 
-.container p {
-  color: black;
-}
+// .container p {
+//   color: black;
+// }
 
 .job-photo img {
   width: 250px;
