--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,9 +1,11 @@
 #map {
-  height: calc(100vh - 70px);
+  height: 100vh;
   // width: 100vh;
   // margin-left: 8vh;
   border-radius: 5px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  position: sticky;
+  top:0;
 }
 
 .mapboxgl-popup-content {
