Profile delete border-bottom + font size

--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -127,15 +127,15 @@ background-color: cadetblue;
 }
 
 .favorite h3 {
-  border-bottom: 1px solid #499EAA;
   font-family: 'Montserrat', sans-serif;
   color: #405F76;
   text-align: center;
-  margin-bottom: 14px;
+  margin : 0;
   font-size: 18px;
 }
 .favorite h3 i {
   color: #489EA9;
+  font-size: 18px;
   margin-right: 5px;
   text-align: center;
 }
