--- a/app/views/components/_mini_card.html.erb
+++ b/app/views/components/_mini_card.html.erb
@@ -3,7 +3,7 @@
   <div class="mini-card-infos align-top ml-3">
     <div>
       <h5><%= link_to job.title, job_path(job.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window'}  %></h5>
-      <div class="">
+      <div>
         <p><%= job.description %></p>
       </div>
     </div>
