border radius removed from mini card

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -35,7 +35,7 @@
       <div class="d-flex">
         <div class="jobs-cards-and-title">
           <h1 class="my-5">
-            Nous avons trouvé <span class="font-weight-bold text-warning"><%= @jobs.length %></span> jobs <br>
+            Nous avons trouvé <span class="font-weight-bold text-info"><%= @jobs.length %></span> jobs <br>
             qui peuvent te plaire!
           </h1>
           <div class="job-containers">
