--- a/app/views/jobs/_show.html.erb
+++ b/app/views/jobs/_show.html.erb
@@ -1,8 +1,10 @@
 <div class="modal-header d-flex justify-content-between">
   <div><h4 class="modal-title" id="myModalLabel"><%= @job.title %></h4></div>
   <div>
-    <%= link_to job_favorites_path(@job), method: :post, id: "sweet-alert", class: "mt-3", remote: true, onclick:"swal('Annonce sauvegardée !', 'Tu pourras la retrouver dans ton profil.', 'success')" do %>
-      <i class="far fa-heart"></i>
+    <% if user_signed_in? %>
+      <%= link_to job_favorites_path(@job), method: :post, id: "sweet-alert", class: "mt-3", remote: true, onclick:"swal('Annonce sauvegardée !', 'Tu pourras la retrouver dans ton profil.', 'success')" do %>
+        <i class="far fa-heart"></i>
+      <% end %>
     <% end %>
     <button type="button" class="close ml-3" data-dismiss="modal">X</button>
   </div>
