--- a/app/assets/stylesheets/pages/_profil_show.scss
+++ b/app/assets/stylesheets/pages/_profil_show.scss
@@ -111,13 +111,13 @@ background-color: cadetblue;
 }
 
 .favorite {
-  // padding: 15px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow:       0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F8F8;
-  // border-radius: 3px;
-  // margin-right: 15px;
-  width: 100%;
-  height: 100%;
+  width:            100%;
+  height:           100%;
+}
+.favorite:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .favorite-jobs {
