--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -34,6 +34,11 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.btn-upload {
+  font-size: 24px;
+  font-family: 'Montserrat';
+}
+
 .btn-flat:hover {
   background: #66BECB;
   color: white;
