--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -37,12 +37,23 @@
 .btn-upload {
   font-size: 24px;
   font-family: 'Montserrat';
+  color: #499EAA;
+}
+.cv-filename-show {
+  font-size: 12px;
+  font-family: 'Montserrat';
+  color: #499EAA;
 }
 
 .btn-flat:hover {
   background: #66BECB;
   color: white;
 }
+.fa-cloud-upload-alt:hover {
+  font-size: 28px;
+  transition: ease 0.2s;
+}
+
 
 .animoBorderLeftRight{display:inline-block;position:relative;cursor:pointer;margin-right: 15px;color:white;text-decoration:none;}
 .animoBorderLeftRight::after{content:'';position:absolute;width:100%;transform:scaleX(0);height:2px;bottom:0;left:0;background-color:#f39c12;transform-origin:bottom right;transition:transform .4s cubic-bezier(.86,0,.07,1);}
